added database original

--- a/views/hashtag.html
+++ b/views/hashtag.html
@@ -52,8 +52,9 @@
 	                    var series = this.series[0];
 		                  var socket = io.connect('http://localhost');
 						  socket.on('chart', function (data) {
-	                        var x = (new Date()).getTime(), // current time
-	                        y = data;
+/* 						  	console.log(parseFloat(data.averageSentiment)+' '+ data.time); */
+	                        var x = data.time,
+	                        y = data.averageSentiment;
 	                        series.addPoint([x,y], true, true);
 
 						  });
