--- a/public/assets/css/main.less
+++ b/public/assets/css/main.less
@@ -1,3 +1,19 @@
+body {
+  background: #ECE9E9 -webkit-gradient(linear, 0% 0%, 0% 100%, from(white), to(#e6e3e3)) no-repeat;
+
+}
+
+h1 {
+  text-align: center;
+}
+#container {
+  position: fixed;
+  top: 60px;
+  left: 0;
+  right: 0;
+  bottom: 50px;
+}
+
 #tweetTicker li {
 	float: left;
 	color: #fff;
@@ -6,7 +22,9 @@
 #tweetTicker {
 	background: black;
 	width: 100%;
-	
+	height: 50px;
+    position: fixed;
+    bottom: 0;
 	-webkit-marquee-direction:left;
 	-webkit-marquee-increment:medium;
 	-webkit-marquee-repetition:10;
