--- a/views/hashtag.html
+++ b/views/hashtag.html
@@ -125,7 +125,8 @@
 
                 xAxis: {
                     gridLineWidth: 1,
-                    gridLineColor: '#eee'
+                    gridLineColor: '#eee',
+                    minRange: 30 * 24 * 3600 * 1000
                 },
 
                 credits:{
