--- a/views/hashtag.html
+++ b/views/hashtag.html
@@ -126,7 +126,7 @@
                 xAxis: {
                     gridLineWidth: 1,
                     gridLineColor: '#eee',
-                    minRange: 30 * 24 * 3600 * 10
+                    minRange: 30 * 24 * 3600
                 },
 
                 credits:{
