Removed min range for x, added min and max for y

--- a/views/hashtag.html
+++ b/views/hashtag.html
@@ -126,7 +126,9 @@
                 xAxis: {
                     gridLineWidth: 1,
                     gridLineColor: '#eee',
-                    minRange: 30 * 24 * 3600
+                    max: 9,
+                    min: 1
+//                    minRange: 30 * 24 * 3600
                 },
 
                 credits:{
