--- a/views/hashtag.html
+++ b/views/hashtag.html
@@ -60,7 +60,7 @@
 
             $.each(parseData, function (count, result) {
 
-                dataArray.push([result.time, result.averageSentiment, result.tweetGroup]);
+                dataArray.push([result.time, result.averageSentiment]);
 
                 if (count == ( parseData.length - 1 ) && count > 1) {
 
@@ -104,13 +104,6 @@
                                 var x = parseData.time, y = parseData.averageSentiment;
                                 series.addPoint([x, y, parseData.tweetGroup], true, true);
 
-                                $('#tweetTicker ul').empty();
-
-                                $.each(parseData.tweetGroup, function (count, value) {
-
-                                    $('#tweetTicker ul').append('<li class="ellipsis"><div class="square"></div>' + value.tweetText + '</li>');
-
-                                });
 
                             });
 
