Cleaned up tweetgroup

--- a/views/hashtag.html
+++ b/views/hashtag.html
@@ -102,7 +102,7 @@
                                 console.log('CHART connected');
 
                                 var x = parseData.time, y = parseData.averageSentiment;
-                                series.addPoint([x, y, parseData.tweetGroup], true, true);
+                                series.addPoint([x, y], true, true);
 
 
                             });
