--- a/views/hashtag.html
+++ b/views/hashtag.html
@@ -48,7 +48,7 @@
 
     $(function () {
 
-        var socket = io.connect('http://198.61.231.43/:3000/');
+        var socket = io.connect('http://198.61.231.43:3000/');
 
         var chart;
 
