--- a/public/assets/css/main.less
+++ b/public/assets/css/main.less
@@ -1,6 +1,7 @@
 body {
-  .gradient(#141414, #fff);
+  .radial-gradient(#2a2424, #141414);
   position: fixed;
+  background-attachment: fixed;
   top: 0;
   bottom: 0;
   left: 0;
@@ -106,4 +107,32 @@ h1 {
       margin: 0 0 10px 0;
     }
   }
+}
+
+#mapContainer {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  .opacity(0.1);
+
+  #mapInner {
+    width: 100%;
+    height: 100%;
+  }
+}
+
+#graphSwitch {
+  width: 50px;
+  height: 50px;
+  position: fixed;
+  z-index: 99;
+  background: blue;
+  top: 5px;
+  right: 5px;
+}
+
+#container.switch {
+  display: none;
 }
